# zitadel-rust-client

./: .codecov.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.lock.license  Cargo.toml  README.md  additional-types.list  cliff.toml  event-types.list  gen-event-types.sh  rustfmt.toml
.config/: nextest.toml  starte2e.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: add-issue-to-project.yml  add-issues-to-project.yaml  add-issues-to-project.yml  ff-merge.yml  publish.yml  rust-workflow.yml  rust.yml
src/: authentication.rs  error.rs  lib.rs
src/users/: mod.rs
src/users/models/: access_token_type.rs  add_human_user_request.rs  add_human_user_response.rs  add_idp_link_response.rs  add_otp_email_response.rs  add_otpsms_response.rs  and_query.rs  auth_factor_state.rs  authentication_method_type.rs  create_passkey_registration_link_response.rs  deactivate_user_response.rs  delete_user_response.rs  details.rs  display_name_query.rs  email_query.rs  first_name_query.rs  gender.rs  get_user_by_id_response.rs  hashed_password.rs  human_email.rs  human_phone.rs  human_profile.rs  human_user.rs  idp_information.rs  idp_intent.rs  idp_link.rs  idpldap_access_information.rs  idpo_auth_access_information.rs  idpsaml_access_information.rs  in_user_emails_query.rs  in_user_id_query.rs  last_name_query.rs  ldap_credentials.rs  list_authentication_method_types_response.rs  list_details.rs  list_idp_links_response.rs  list_passkeys_response.rs  list_query.rs  list_users_request.rs  list_users_response.rs  (+96 more)
src/v1/: error.rs  event_types.rs  event_types_imports.rs  event_types_manual.rs  mod.rs  types.rs
src/v2/: authentication.rs  events.rs  mod.rs  pagination.rs  private_key_jwt.rs  token.rs
src/v2/actions/: mod.rs
src/v2/actions/models/: action_service_update_target_body.rs  mod.rs  protobuf_any.rs  rpc_status.rs  v2_condition.rs  v2_create_target_request.rs  v2_create_target_response.rs  v2_delete_target_response.rs  v2_event_execution.rs  v2_execution.rs  v2_execution_field_name.rs  v2_execution_search_filter.rs  v2_execution_type.rs  v2_execution_type_filter.rs  v2_function_execution.rs  v2_get_target_response.rs  v2_in_conditions_filter.rs  v2_in_target_ids_filter.rs  v2_list_execution_functions_response.rs  v2_list_execution_methods_response.rs  v2_list_execution_services_response.rs  v2_list_executions_request.rs  v2_list_executions_response.rs  v2_list_targets_request.rs  v2_list_targets_response.rs  v2_pagination_request.rs  v2_pagination_response.rs  v2_payload_type.rs  v2_request_execution.rs  v2_response_execution.rs  v2_rest_async.rs  v2_rest_call.rs  v2_rest_webhook.rs  v2_set_execution_request.rs  v2_set_execution_response.rs  v2_target.rs  v2_target_field_name.rs  v2_target_filter.rs  v2_target_name_filter.rs  v2_target_search_filter.rs  (+39 more)
src/v2/management/: mod.rs
src/v2/management/models/: actionv1_flow.rs  idpv1_idp.rs  import_human_user_response_passwordless_registration.rs  management_service_add_api_app_body.rs  management_service_add_app_key_body.rs  management_service_add_machine_key_body.rs  management_service_add_oidc_app_body.rs  management_service_add_personal_access_token_body.rs  management_service_add_project_grant_body.rs  management_service_add_project_grant_member_body.rs  management_service_add_project_member_body.rs  management_service_add_project_role_body.rs  management_service_add_saml_app_body.rs  management_service_add_user_grant_body.rs  management_service_bulk_add_project_roles_body.rs  management_service_bulk_remove_user_metadata_body.rs  management_service_bulk_set_user_metadata_body.rs  management_service_deactivate_action_body.rs  management_service_deactivate_app_body.rs  management_service_deactivate_org_idp_body.rs  management_service_deactivate_project_body.rs  management_service_deactivate_project_grant_body.rs  management_service_deactivate_user_body.rs  management_service_deactivate_user_grant_body.rs  management_service_delete_action_body.rs  management_service_generate_machine_secret_body.rs  (+663 more)
src/v2/organization/: mod.rs
src/v2/project/: mod.rs
src/v2/token/: jwt.rs  opaque.rs
src/v2/users/: mod.rs  pagination.rs
tests/: docker-compose.yaml  e2e.rs  setup.sh  tests.rs
tests/environment/: docker-compose.yaml
tests/environment/zitadel/: zitadel-config.yaml  zitadel-init.yaml
tests/zitadel/: service-user.json
(+167 files in other folders)
